<resources>
    <string name="app_name">InstAlert!</string>
    <string name="settingButtonContent">Settings</string>
    <string name="alertButtonContent">Alert</string>
    <string name="cancelButtonContent">Cancel Alert</string>
    <string name="title_activity_settings">Settings</string>
    <string name="website_URL">https://alertapp-slater10.c9users.io/</string>
    <string name="default_message">I am in need of assistance!</string>

    <!-- Broadcast strings -->
    <string name="start_instalert_alarm">startInstAlertAlarm</string>
    <string name="no_contact_error">noContactError</string>
    <string name="record_video">recordVideo</string>
    <string name="record_sound">recordSound</string>
    <string name="recording_finished">recordingFinished</string>

    <!-- String for about -->
    <string name="aboutText">  Instalert! is a helper app created by\n
      Shane Drobnick\n
      Gregory Gorton\n
      Bruce Jaques\n
      Shaun Mclaughlin\n
      Nicolas Slater\n
      Supervisor: Ahsan Morshed RMIT University\n
        \n
        Credit to https://icons8.com/ for icons used in this app.
</string>


    <!-- STRINGS FOR HELP ACTIVITY -->
    <string name="helpText">InstAlert! is a helper app for sending quick alerts to a trusted
    contact. These alerts can include a small video or sound clip from either the front or rear
        facing camera and your GPS co-ordinates.\n Thesealerts can be sent via SMS and/or e-mail.
    \nYou also have the option to have the application to also bring your phone dialer up with
        emergency number pre-dialled, ready for you call.\n Please see the video below to see how
    to use it.</string>
    <string name="youtubeButtonContent">Link to youtube video</string>

<!-- String related to service and alert processing -->

    <string name="no_contact_alert">No contact has been set!\n Please set a contact in setting
        before activating alarm.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_contact_name">Contact_Name</string>
    <string name="pref_contact_id">ContactID</string>
    <string name="pref_contact_email">Contact_Email</string>
    <string name="pref_contact_phone_number">Contact_Phone_Number</string>
    <string name="pref_contact_image_uri">Contact_Image_URI</string>
    <string name="cert_id_key">certID</string>
    <string name="device_id_key">deviceID</string>

    <!-- Send Option view Settings
    English  -->
    <string name="SendTxtMsg">Send Text Message</string>
    <string name="SendEmail">Send Email</string>
    <string name="CallEmeNum">Call Emergency Number</string>
    <string name="RecordSnd">Record Sound</string>
    <string name="RecordVid">Record video</string>
    <string name="FrontCam">Front Camera</string>
    <string name="FaceCam">Face Camera</string>

    <string name="MapsGPS">Send Location Maps/GPS</string>
    <string name="GPSLat">GPS LATITUDE</string>
    <string name="GPSLONG">GPS LONGITUDE</string>
    <string name="GPStime">GPS TIME</string>
    <string name="GPSAddress">address</string>

    <string name="Contact4Eme">Contact for Emergency</string>
    <!-- Option view Settings file -->
    <string name="OptSettingsFile">com.optional.Settings.Project.txt</string>
    <!-- <string name="SendTextMessage">SendTextMessage</string> -->
    <string name="CameraSwitch">CameraSwitch</string>
    <!-- Spinners -->
    <string name="SoundVideoRecordTime">vidSndRecTimeSpinner</string>

    <string-array name="Record_Times">
        <item>3 Sec</item>
        <item>4 Sec</item>
        <item>5 Sec</item>
    </string-array>

<!-- String related to camera -->
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Intro message for some reason</string>
    <string name="button">SendTo</string>


</resources>
