<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group4.programmingproject1.MainActivity"
    android:background="#00bcd4">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:layout_alignParentBottom="true"
        android:src="@drawable/cancelbutton"
        android:background="#00bcd4"
        android:contentDescription="@string/cancelButtonContent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:clickable="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/settings"
        android:background="#00bcd4"
        android:contentDescription="@string/settingButtonContent"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameButton"
        android:text="@string/app_name"
        android:background="#00bcd4"
        android:layout_alignTop="@+id/settingsButton"
        android:layout_alignEnd="@+id/alertButton"
        android:layout_toEndOf="@+id/settingsButton"
        android:layout_above="@+id/alertButton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:clickable="true"
        android:onClick="doAboutButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alertButton"
        android:src="@drawable/alertbutton"
        android:layout_above="@+id/cancelButton"
        android:layout_below="@+id/settingsButton"
        android:background="#ff0000"
        android:clickable="true"
        android:contentDescription="@string/alertButtonContent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
