<?xml version="1.0" encoding="utf-8"?>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group4.programmingproject1.Settings"
    android:background="#3333ff">
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="group4.programmingproject1.Settings"
    android:background="#3333ff">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">


        <android.support.v7.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SendTxtMsg"
                android:id="@+id/textView"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:paddingStart="6dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_TextMsg"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SendEmail"
                android:id="@+id/textView2"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:textStyle="bold"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Checkbox_Email"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/CallEmeNum"
                android:id="@+id/textView3"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:textStyle="bold"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Checkbox_EmeNum"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/RecordSnd"
                android:id="@+id/textView8"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:textStyle="bold"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Checkbox_RecSound"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/RecordVid"
                android:id="@+id/textView5"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:textStyle="bold"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Checkbox_RecVideo"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="2dp"
            android:background="#FFFFFF">

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CCCCCC"
            android:minHeight="40dp"
            android:gravity="center_vertical">
            >

            <Switch
                android:id="@+id/switch_Camera"
                android:layout_weight="2"
                android:layout_column="2"
                android:checked="false"
                android:text="@string/FrontCam"
                android:textStyle="bold"
                android:paddingEnd="8dp"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/FaceCam"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:layout_column="3"
                android:textStyle="bold"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#509BC7"
            android:minHeight="40dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MapsGPS"
                android:id="@+id/textView4"
                android:layout_weight="3"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:textStyle="bold"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CheckBox_GPS"
                android:layout_weight="1"
                android:layout_column="3"
                android:buttonTint="#FFFFFF"
                android:checked="false" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="4dp"
            android:background="#FFFFFF">

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4388CC">

            <TextView
                android:text="@string/Contact4Eme"
                android:id="@+id/textView9"
                android:layout_column="2"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingStart="6dp"
                android:minHeight="120dp"
                android:gravity="center_vertical"
                android:textStyle="bold"/>

        </TableRow>

    </TableLayout>
<!--
</RelativeLayout>
-->
</ScrollView>